[gd_scene load_steps=3 format=3 uid="uid://hubcommissariat"]

[ext_resource type="Script" path="res://systems/scripts/CommissariatHub.gd" id="1"]
[ext_resource type="Script" path="res://systems/scripts/Player.gd" id="2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]

[sub_resource type="BoxMesh" id="BoxMesh_sol"]
size = Vector3(30, 0.2, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_sol"]
size = Vector3(30, 0.2, 30)

[sub_resource type="BoxMesh" id="BoxMesh_board"]
size = Vector3(2, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_board"]
size = Vector3(2, 3, 0.2)

[node name="CommissariatHub" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15, 0)
projection = 1
current = true
size = 20.0

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_new")

[node name="Sol" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sol"]
mesh = SubResource("BoxMesh_sol")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sol"]
shape = SubResource("BoxShape3D_sol")

[node name="BoardEnquetes" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.5, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoardEnquetes"]
mesh = SubResource("BoxMesh_board")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoardEnquetes"]
shape = SubResource("BoxShape3D_board")

[node name="Label3D" type="Label3D" parent="BoardEnquetes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
text = "BOARD ENQUÊTES"
font_size = 32

[node name="BureauJoueur" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BureauJoueur"]
mesh = SubResource("BoxMesh_bureau")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BureauJoueur"]
shape = SubResource("BoxShape3D_bureau")

[node name="Label3D" type="Label3D" parent="BureauJoueur"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
text = "BUREAU"
font_size = 32

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelInfo" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 20
text = "Commissariat Central"

[node name="LabelInteraction" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "[E] Interagir"
horizontal_alignment = 1
visible = false

[node name="PanelEnquetes" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelEnquetes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/PanelEnquetes/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ENQUÊTES DISPONIBLES"
horizontal_alignment = 1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_new"]

[sub_resource type="BoxMesh" id="BoxMesh_bureau"]
size = Vector3(2, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bureau"]
size = Vector3(2, 1, 1)
